Disable social links temporarily to fix build

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,4 +1,5 @@
 # Social media links
+# For documentation: https://github.com/george-gca/jekyll-socials
 email: chuck.blake@gmail.com
 twitter_username: chuckblake
 linkedin_username: chuckblake
